--- a/style.css
+++ b/style.css
@@ -9,11 +9,8 @@ body{
     font-family: 'Poppins', sans-serif;
     margin: 0%;
 }
-h1{
-    font-size: 50px;
-}
 .hightlate{
-    color:#a14b2b;
+    color:#ee551d;
     font-family: 'Roboto', sans-serif;
 }
 .half-width{
@@ -29,5 +26,47 @@ h1{
     background-repeat: no-repeat;
 }
 section{
-    height: 500px;
+    height: 550px;
+}
+.link-button{
+    text-decoration: none;
+    font-size: 30px;
+    background-image: linear-gradient(lightSalmon, tomato);
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+}
+p{
+    color: dimgray;
+}
+.second-banner{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right bottom;
+}
+.single-experience{
+    box-shadow: 10px 10px 20px gray;
+    border-radius: 5px;
+    height: 50%;
+    padding: 10px;
+    background-color: white;
+}
+.experience-area{
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, lightSalmon, tomato);
+    border-image-slice:1;
+}
+#Baby-web{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, blue, cyan);
+    border-image-slice:1;
+}
+footer p{
+    text-align: center;
 }
