--- a/style.css
+++ b/style.css
@@ -1,22 +1,23 @@
-/* font-family: 'Roboto', sans-serif; */
-/* font-family: 'Poppins', sans-serif; */
-
-/* body{
-    font-family: 'Roboto', sans-serif;
-} */
-
 body{
-    font-family: 'Poppins', sans-serif;
     margin: 0%;
+    font-family: 'Poppins', sans-serif;
 }
 .hightlate{
     color:#ee551d;
-    font-family: 'Roboto', sans-serif;
 }
 .half-width{
     width: 40%;
     float: left;
     margin: 5%;
+}
+h1{
+    font-size: 50px;
+}
+h2{
+    font-size: 40px;
+}
+p{
+    color:gray
 }
 .half-width img{
     width: 100%;
@@ -26,30 +27,26 @@ body{
     background-repeat: no-repeat;
 }
 section{
-    height: 550px;
+    height: 500px;
+    padding-bottom: 150px;
 }
 .link-button{
     text-decoration: none;
-    font-size: 30px;
-    background-image: linear-gradient(lightSalmon, tomato);
+    background-image: linear-gradient(45deg,lightSalmon, tomato);
     padding: 10px 20px;
     border-radius: 5px;
     color: white;
-    font-weight: bold;
-}
-p{
-    color: dimgray;
+    font-weight: 700;
 }
 .second-banner{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
-    background-position: right bottom;
+    background-position: right;
 }
 .single-experience{
     box-shadow: 10px 10px 20px gray;
     border-radius: 5px;
-    height: 50%;
-    padding: 10px;
+    height: 80%;
     background-color: white;
 }
 .experience-area{
